@@ -5,14 +5,15 @@ import java.time.Duration;
 import java.util.List;
 import java.util.regex.Matcher;
 import java.util.regex.Pattern;
+import lombok.extern.log4j.Log4j2;
 import org.openqa.selenium.*;
 import org.openqa.selenium.chrome.ChromeDriver;
 import org.openqa.selenium.chrome.ChromeOptions;
 import org.openqa.selenium.support.ui.ExpectedConditions;
 import org.openqa.selenium.support.ui.WebDriverWait;
 
+@Log4j2
 public class ProductScraper {
-
 
   public static WebDriver getDriver() {
     WebDriverManager.chromedriver().setup();
@@ -26,8 +27,6 @@ public class ProductScraper {
     options.addArguments("--disable-software-rasterizer");
     options.addArguments("--disable-background-networking");
 
-
-
     return new ChromeDriver(options);
   }
 
@@ -35,6 +34,7 @@ public class ProductScraper {
     WebDriver driver = getDriver();
 
     try {
+      log.info("Scraping product name from URL: {}", url);
       driver.get(url);
 
       WebDriverWait wait = new WebDriverWait(driver, Duration.ofSeconds(3));
@@ -43,40 +43,37 @@ public class ProductScraper {
 
       List<WebElement> cookiesButtons = driver.findElements(By.cssSelector("button[data-testid='cookie-banner-accept-all']"));
       if (!cookiesButtons.isEmpty()) {
-        WebElement acceptCookiesButton = cookiesButtons.getFirst();
+        WebElement acceptCookiesButton = cookiesButtons.get(0);
         if (acceptCookiesButton.isDisplayed() && acceptCookiesButton.isEnabled()) {
           acceptCookiesButton.click();
         }
       }
 
       WebElement productNameElement =
-          driver.findElement(By.cssSelector("h1[data-testid='product-name']"));
+              driver.findElement(By.cssSelector("h1[data-testid='product-name']"));
 
-      System.out.println("HTML elementu: " + productNameElement.getAttribute("outerHTML"));
+      log.debug("HTML of the product name element: {}", productNameElement.getAttribute("outerHTML"));
 
       String productNameText =
-          (String)
-              js.executeScript(
-                  "var element = arguments[0];"
-                      + "var child = element.firstChild;"
-                      + "while(child && child.nodeType != 3) {"
-                      + "    child = child.nextSibling;"
-                      + "}"
-                      + "return child ? child.nodeValue.trim() : '';",
-                  productNameElement);
+              (String)
+                      js.executeScript(
+                              "var element = arguments[0];"
+                                      + "var child = element.firstChild;"
+                                      + "while(child && child.nodeType != 3) {"
+                                      + "    child = child.nextSibling;"
+                                      + "}"
+                                      + "return child ? child.nodeValue.trim() : '';",
+                              productNameElement);
 
-      System.out.println("Pobrana nazwa produktu: " + productNameText);
+      log.info("Extracted product name: {}", productNameText);
 
       return productNameText;
 
     } catch (TimeoutException e) {
-      System.err.println(
-          "TimeoutException: Nie udało się znaleźć elementu w podanym czasie dla URL: " + url);
-      e.printStackTrace();
+      log.error("TimeoutException: Failed to find the element within the allotted time for URL: {}", url, e);
       return null;
     } catch (Exception e) {
-      System.err.println("Błąd podczas pobierania nazwy produktu dla URL: " + url);
-      e.printStackTrace();
+      log.error("Error while extracting the product name for URL: {}", url, e);
       return null;
     } finally {
       driver.quit();
@@ -87,6 +84,7 @@ public class ProductScraper {
     WebDriver driver = getDriver();
 
     try {
+      log.info("Scraping product price from URL: {}", url);
       driver.get(url);
 
       WebDriverWait wait = new WebDriverWait(driver, Duration.ofSeconds(3));
@@ -102,33 +100,32 @@ public class ProductScraper {
       }
 
       WebElement priceSection =
-          driver.findElement(By.cssSelector("section.wrapperstyled__PriceWrapper-xngval-3"));
+              driver.findElement(By.cssSelector("section.wrapperstyled__PriceWrapper-xngval-3"));
 
       WebElement priceElement;
       List<WebElement> discountPriceElements = priceSection.findElements(By.cssSelector("[data-selen='product-discount-price']"));
       if (!discountPriceElements.isEmpty()) {
-        priceElement = discountPriceElements.getFirst();
+        priceElement = discountPriceElements.get(0);
       } else {
-        priceElement = priceSection.findElement(By.cssSelector("[data-selen='product-price']"));  // Jeśli nie znaleziono ceny zniżkowej, pobierz standardową cenę
+        priceElement = priceSection.findElement(By.cssSelector("[data-selen='product-price']"));
       }
 
       String priceText =
-          (String)
-              js.executeScript(
-                  "var element = arguments[0];"
-                      + "var child = element.firstChild;"
-                      + "while(child && child.nodeType != 3) {"
-                      +
-                      "    child = child.nextSibling;"
-                      + "}"
-                      + "return child ? child.nodeValue.trim() : '';",
-                  priceElement);
+              (String)
+                      js.executeScript(
+                              "var element = arguments[0];"
+                                      + "var child = element.firstChild;"
+                                      + "while(child && child.nodeType != 3) {"
+                                      + "    child = child.nextSibling;"
+                                      + "}"
+                                      + "return child ? child.nodeValue.trim() : '';",
+                              priceElement);
 
-      System.out.println("Pobrany tekst ceny: " + priceText);
+      log.debug("Extracted price text: {}", priceText);
 
       if (priceText == null || priceText.isEmpty()) {
         priceText = priceElement.getText().trim();
-        System.out.println("Alternatywny tekst ceny: " + priceText);
+        log.debug("Alternative price text: {}", priceText);
       }
 
       if (priceText != null && !priceText.isEmpty()) {
@@ -136,18 +133,19 @@ public class ProductScraper {
         Matcher matcher = pattern.matcher(priceText);
         if (matcher.find()) {
           String priceNumber = matcher.group(1).replace(",", ".").trim();
-          return Double.parseDouble(priceNumber);
+          Double price = Double.parseDouble(priceNumber);
+          log.info("Extracted product price: {}", price);
+          return price;
         } else {
-          System.err.println("Nie udało się wyodrębnić liczby z tekstu ceny dla URL: " + url);
+          log.error("Failed to extract numeric value from the price text for URL: {}", url);
           return null;
         }
       } else {
-        System.err.println("Nie udało się pobrać tekstu ceny dla URL: " + url);
+        log.error("Failed to retrieve price text for URL: {}", url);
         return null;
       }
     } catch (Exception e) {
-      System.err.println("Błąd podczas pobierania ceny dla URL: " + url);
-      e.printStackTrace();
+      log.error("Error while extracting the product price for URL: {}", url, e);
       return null;
     } finally {
       driver.quit();
